Production ready setup for test